--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">praca na oene</string>
+    <string name="data1">Data1</string>
+    <string name="data3">Data3</string>
+    <string name="data2">Data2</string>
 </resources>
